Helm_TodoAppMicro_Services/Delete_Task_TodoApplication/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deletetask
  template:
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask
        image: todoappcontainer.azurecr.io/deletetask:latest
        ports:
        - containerPort: 8000
