Helm_TodoAppMicro_Services/Delete_Task_TodoApplication/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deletetask
  labels:
    name: deletetask
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: deletetask.dev28.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deletetask
            port: 
              number: 80
